--- a/index.html
+++ b/index.html
@@ -6,83 +6,11 @@
 	</head>
 	<body>
 		<div class="panel panel-default">
-    	<div class="panel-body"><h1>Choose Your Weapon</h1> <br/>
+    	<div class="panel-body"><h1>Choose</h1> <br/>
 			<button onclick=“rockClick()" type="button" class="btn btn-info" style="padding:">Rock</button>
 			<button onclick=“myFunction()" type="button" class="btn btn-primary">Paper</button>
 			<button onclick=“buttonClick()" type="button" class="btn btn-success">Scissor</button>
 		</div>	
 		</div>
-	<script>
-		var playerWins = 0;
-     var playerLoss = 0;
-     var playerTie = 0;
-     var tempnum = 0;
-     var gener = 0;
-     var computerResult=0;
-
-     var resultArray = ["R", "P", "S"];
-
-     function rockClick(){
-     	playerResult = "R"; 
-     	console.log(playerResult)
-     }  
-
-
-     var playerResult = document.onclick;
-     console.log(playerResult)
-     tempnum = Math.round(Math.random()*10)+1;
-     gener = tempnum %3;
-
-     if (playerResult =="R" )                                    
-     {
-       if (computerResult=="R")
-       {
-         playerTie++;
-       }
-       else if (computerResult=="P")
-       {
-         playerLoss++;
-       }
-       else
-       {
-         playerWins++;
-       }
-     }
-
-     else if (playerResult=="P")
-     {
-       if (computerResult=="R")
-       {
-         playerWins++;
-       }
-       else if (computerResult=="P")
-       {
-         playerTie++;
-       }
-       else
-       {
-         playerLoss++;
-       }
-     }
-       else playerResult="S";
-    {
-       if (computerResult=="R")
-       {
-         playerLoss++;
-       }
-       else if (computerResult=="P")
-       {
-         playerWins++;
-       }
-       else
-       {
-         playerTie++;
-       }
-     }
-
-   /*} */
-
-	</script>
-
 	</body>
 </html>
