--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     	<meta charset="UTF-8">
     	<title>Rock, Paper, Scissors</title>
     	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <script type="javascript" src="game.js"></script> 
 	</head>
 	<body>
 		<div class="panel panel-default">
@@ -12,5 +13,22 @@
 			<button onclick=“buttonClick()" type="button" class="btn btn-success">Scissor</button>
 		</div>	
 		</div>
+        <div class="container-fluid">
+         <div class="row">
+           <div class="col-md-12">
+             <p id="computer wins">Computer wins: 0</p>
+           </div>
+        </div>
+       <div class="row">
+          <div class="col-md-12">
+           <p id="userwins">Your wins: 0</p>
+          </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+         <p id="ties">Ties: 0</p>
+        <div>
+      </div>
+      </div>
 	</body>
 </html>
