--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     	<title>Rock, Paper, Scissors</title>
     	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <script type="javascript" src="game.js"></script> 
+        <script src="jquery-3.2.1.min.js"></script>
 	</head>
 	<body>
 		<div class="panel panel-default">
