--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
 		</div>
         <div class="container-fluid">
          <div class="row">
+          <div class="col-md-12">
+           <p id="youchose"> You chose:</p>
+          </div>
+         </div>
+         <div class="row">
+          <div class="col-md-12">
+           <p id="computerhose"> Computer chose:</p>
+          </div>
+         </div>
+         <div class="row">
            <div class="col-md-12">
              <p id="computer wins">Computer wins: 0</p>
            </div>
