--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <div class="container-fluid">
          <div class="row">
           <div class="col-md-12">
-           <p id="youchose"> You chose:</p>
+           <p id="youchoose"> You chose:</p>
           </div>
          </div>
          <div class="row">
           <div class="col-md-12">
-           <p id="computerhose"> Computer chose:</p>
+           <p id="computerchose"> Computer chose:</p>
           </div>
          </div>
          <div class="row">
