--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	</head>
 	<body>
 <!--                <img src="assets/images/image1.jpg" height="200px" width="200px"> -->
-                <img src="assets/images/giphy.gif" height="200px" width="200px">
+                <center><img src="assets/images/giphy.gif" height="200px" width="200px"></center>
 		<div class="panel panel-default">
-    	<div class="panel-body"><h1>Choose</h1> <br/>
+    	<div class="panel-body"><h1>Choose first to 5 wins!</h1> <br/>
                         <button onclick="rock()" class="btn-info">Rock</button>
                         <button onclick="paper()" class="btn-info">Paper</button>
                         <button onclick="scissors()" class="btn-info">Scissors</button>
